# rust-dioxus-base

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
crates/apps/desktop/: Cargo.toml
crates/apps/desktop/src/: main.rs
crates/apps/desktop/src/views/: home.rs
crates/apps/mobile/: Cargo.toml
crates/apps/mobile/src/: main.rs
crates/apps/web/: Cargo.toml
crates/apps/web/src/: main.rs
crates/libs/lib-ui/: Cargo.toml
