[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/{{username}}/{{project-name}}.git"
authors = ["{{authors}}"]
description = "{{description}}"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For exploratory dev.

[workspace]
resolver = "2"
members = [
    # -- Application Libraries
    "crates/libs/lib-utils", # e.g., base64, time.
    "crates/libs/lib-core",  # e.g., model, ctx, config.
    "crates/libs/lib-ui",

    # -- Applications
    "crates/apps/desktop",
    "crates/apps/web",
    "crates/apps/mobile",

    # -- Tools
    # "crates/tools/gen-key",
]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
# Dioxus
dioxus = { version = "0.6.0" }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#Other
derive_more = {version = "1", features = ["from"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }
lib_ui = { path = "crates/libs/lib-ui" }

# Dev
anyhow = "1"
httpc-test = "0.1"
serial_test = "2"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
